# journal_entry

./: db.sqlite3  main.py  pyproject.toml  requirements.txt
journal_app/: admin.py  file_processors.py  forms.py  models.py  serializers.py  urls.py  views.py
journal_app/management/commands/: process_files.py
journal_app/migrations/: 0001_initial.py
journal_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/journal_app/: entry_list.html  upload.html
